@@ -1,3 +1,8 @@
+2013-05-30  Tom Tromey  <tromey@redhat.com>
+
+	* stabsread.c (read_struct_type): Call do_cleanups along
+	all return paths.
+
 2013-05-30  Maciej W. Rozycki  <macro@codesourcery.com>
 
 	* mips-linux-tdep.c: Adjust formatting throughout.
